WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
235261
[JSC] Fix misc issues in WebAssembly.Exception
https://bugs.webkit.org/show_bug.cgi?id=235261
Summary
[JSC] Fix misc issues in WebAssembly.Exception
Yusuke Suzuki
Reported
2022-01-14 20:03:44 PST
[JSC] Fix misc issues in WebAssembly.Exception
Attachments
Patch
(14.62 KB, patch)
2022-01-14 20:05 PST
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch
(16.72 KB, patch)
2022-01-14 21:03 PST
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch
(16.69 KB, patch)
2022-01-15 00:22 PST
,
Yusuke Suzuki
ashvayka
: review+
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2022-01-14 20:05:58 PST
Created
attachment 449239
[details]
Patch
EWS Watchlist
Comment 2
2022-01-14 20:07:18 PST
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see
https://trac.webkit.org/wiki/WPTExportProcess
Yusuke Suzuki
Comment 3
2022-01-14 20:21:57 PST
Comment on
attachment 449239
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=449239&action=review
> LayoutTests/imported/w3c/web-platform-tests/wasm/jsapi/exception/getArg.tentative.any.js:23 > + assert_throws_js(TypeError, () => exn.getArg(tag, 1));
According to the spec, it should be TypeError
https://webassembly.github.io/exception-handling/js-api/index.html#dom-exception-getarg
Yusuke Suzuki
Comment 4
2022-01-14 21:03:23 PST
Created
attachment 449242
[details]
Patch
Yusuke Suzuki
Comment 5
2022-01-15 00:22:44 PST
Created
attachment 449246
[details]
Patch
Alexey Shvayka
Comment 6
2022-01-15 06:30:26 PST
Comment on
attachment 449246
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=449246&action=review
r=me with ChangeLog nits.
> Source/JavaScriptCore/ChangeLog:10 > +
3. Throw TypeError instead of RangeError when implementing [EnforceRange] extended attribute (step 6 of
https://webidl.spec.whatwg.org/#abstract-opdef-converttoint
). Also, a link to proposal spec would be nice:
https://github.com/WebAssembly/exception-handling/blob/main/proposals/exception-handling/Exceptions.md#js-api
.
Alexey Shvayka
Comment 7
2022-01-15 07:05:46 PST
(In reply to Alexey Shvayka from
comment #6
)
> 3. Throw TypeError instead of RangeError when implementing [EnforceRange] > extended attribute (step 6 of >
https://webidl.spec.whatwg.org/#abstract-opdef-converttoint
). > > Also, a link to proposal spec would be nice: >
https://github.com/WebAssembly/exception-handling/blob/main/proposals/
> exception-handling/Exceptions.md#js-api.
Oops, that's not [EnforceRange], sorry, and the spec link from WPT PR is way better.
Yusuke Suzuki
Comment 8
2022-01-15 13:30:42 PST
(In reply to Alexey Shvayka from
comment #7
)
> (In reply to Alexey Shvayka from
comment #6
) > > 3. Throw TypeError instead of RangeError when implementing [EnforceRange] > > extended attribute (step 6 of > >
https://webidl.spec.whatwg.org/#abstract-opdef-converttoint
). > > > > Also, a link to proposal spec would be nice: > >
https://github.com/WebAssembly/exception-handling/blob/main/proposals/
> > exception-handling/Exceptions.md#js-api. > > Oops, that's not [EnforceRange], sorry, and the spec link from WPT PR is way > better.
OK, added!
Yusuke Suzuki
Comment 9
2022-01-15 13:32:48 PST
Committed
r288065
(
246085@trunk
): <
https://commits.webkit.org/246085@trunk
>
Radar WebKit Bug Importer
Comment 10
2022-01-15 13:33:16 PST
<
rdar://problem/87641664
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug