[JSC] Fix misc issues in WebAssembly.Exception https://bugs.webkit.org/show_bug.cgi?id=235261

Reviewed by Alexey Shvayka.

JSTests:

* wasm/stress/create-tag-from.js:
* wasm/v8/exceptions-api.js:
(TestGetArg):

LayoutTests/imported/w3c:

Remove web-platform-tests/wasm/jsapi/exception/type.tentative.any.js test since
this behavior is not defined in wasm exception-handling and/or wasm js-types spec.
Probably this test was confused with WebAssembly.Tag (and that test is in wasm/jsapi/tag/).

Also change RangeError to TypeError according to the spec[1].

[1]: https://webassembly.github.io/exception-handling/js-api/index.html#dom-exception-getarg

* web-platform-tests/wasm/jsapi/exception/getArg.tentative.any-expected.txt:
* web-platform-tests/wasm/jsapi/exception/getArg.tentative.any.js:
(test):
* web-platform-tests/wasm/jsapi/exception/getArg.tentative.any.worker-expected.txt:
* web-platform-tests/wasm/jsapi/exception/toString.tentative.any-expected.txt:
* web-platform-tests/wasm/jsapi/exception/toString.tentative.any.worker-expected.txt:
* web-platform-tests/wasm/jsapi/exception/type.tentative.any-expected.txt: Removed.
* web-platform-tests/wasm/jsapi/exception/type.tentative.any.html: Removed.
* web-platform-tests/wasm/jsapi/exception/type.tentative.any.js: Removed.
* web-platform-tests/wasm/jsapi/exception/type.tentative.any.worker-expected.txt: Removed.
* web-platform-tests/wasm/jsapi/exception/type.tentative.any.worker.html: Removed.

Source/JavaScriptCore:

1. Add @toStringTag to WebAssembly.Exception.prototype.
2. Add argument count check for WebAssembly.Exception methods (since it is specified in WebIDL and these methods do not have optional parameters).

* wasm/js/WebAssemblyExceptionPrototype.cpp:
(JSC::WebAssemblyExceptionPrototype::finishCreation):
(JSC::JSC_DEFINE_HOST_FUNCTION):


Canonical link: https://commits.webkit.org/246085@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288065 268f45cc-cd09-0410-ab3c-d52691b4dbfc